force-app/main/default/objects/VIP_Card_Exchange__c/VIP_Card_Exchange__c.object-meta.xml
<CustomObject>
    <label>VIP Card Exchange</label>
    <nameField>
        <displayFormat>VIP-{00000000}</displayFormat>
        <label>VIP Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>VIP Card Exchanges</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>