force-app/main/default/objects/VIP_Card_Exchange__c/fields/Guest__c.field-meta.xml
<CustomField>
    <fullName>Guest__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Guest</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Guest, VIP Guest</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>VIP Card Exchanges</relationshipLabel>
    <relationshipName>VIP_Card_Exchanges</relationshipName>
    <type>Lookup</type>
</CustomField>