force-app/main/default/objects/VIP_Card_Exchange__c/fields/Guest_Linked__c.field-meta.xml
<CustomField>
    <fullName>Guest_Linked__c</fullName>
    <description>For SF reporting purposes</description>
    <formula>NOT(ISBLANK( Guest__c ))</formula>
    <label>Guest Linked</label>
    <type>Checkbox</type>
</CustomField>