force-app/main/default/objects/VIP_Card_Exchange__c/fields/Guest_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Guest_Record_Type__c</fullName>
    <description>Return the Developer Name of the Record Type of the associated Guest Record</description>
    <formula>Guest__r.RecordType.DeveloperName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Return the Developer Name of the Record Type of the associated Guest Record</inlineHelpText>
    <label>Guest Record Type</label>
    <type>Text</type>
</CustomField>