force-app/main/default/objects/VIP_Card_Exchange__c/fields/Offer_Type__c.field-meta.xml
<CustomField>
    <fullName>Offer_Type__c</fullName>
    <label>Offer Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>VIP Card</fullName>
                <default>true</default>
                <label>VIP Card</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>