force-app/main/default/objects/VIP_Card_Exchange__c/fields/Total_Card_Spend__c.field-meta.xml
<CustomField>
    <fullName>Total_Card_Spend__c</fullName>
    <label>Total Card Spend</label>
    <summarizedField>VIP_Card_Brand_Purchase__c.Spend_Amount__c</summarizedField>
    <summaryForeignKey>VIP_Card_Brand_Purchase__c.VIP_Card_Exchange__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>