force-app/main/default/objects/VIP_Card_Exchange__c/fields/VIP_Card_Code__c.field-meta.xml
<CustomField>
    <fullName>VIP_Card_Code__c</fullName>
    <description>The DM Code on the VIP card</description>
    <externalId>true</externalId>
    <label>VIP Card Code</label>
    <length>16</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>