force-app/main/default/objects/VIP_Card_Exchange__c/listViews/All_Exchanges_Today.listView-meta.xml
<ListView>
    <fullName>All_Exchanges_Today</fullName>
    <columns>NAME</columns>
    <columns>Visit__c</columns>
    <columns>Guest__c</columns>
    <columns>VIP_Card_Code__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>All Exchanges Today</label>
    <language>en_US</language>
</ListView>